--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 
-{"manifest_version": 1,
+{"manifest_version": 2,
 
  "name": "Getting started example",
  "description": "This extension shows a Google Image search result for the current page",
@@ -7,7 +7,8 @@
 
  "browser_action": {
 	"default_icon": "icon.png",
-	"default_popup": "popup.html"
+	"default_popup": "popup.html",
+  "default_title": "It's so FLUFFY!!"
  },
 "permissions": [
 	"activeTab",
